--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.15.0",
     "bcrypt": "^0.8.7",
     "boom": "^3.2.1",
-    "ejs": "^2.4.2",
-    "hapi": "^13.4.1",
+    "ejs": "^2.5.6",
+    "fs": "0.0.1-security",
+    "hapi": "^13.5.3",
     "hapi-auth-jwt2": "^7.0.1",
     "joi": "^8.4.1",
     "jsonwebtoken": "^7.0.0",
     "moment": "^2.13.0",
     "mongoose": "^4.4.20",
-    "nodemailer": "^2.4.2"
+    "nodemailer": "^3.1.1"
   },
   "devDependencies": {
     "lab": "^10.8.2"
