--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
   nodejs:
     build: .
     volumes: 
-      - ./lib:/api/lib
+      - ./src:/api/src
       - ./config:/api/config
     env_file:
       - var.env
     ports:
       - "3000:3000"
 
-  frontend:
+  nginx:
     image: prayforhana/test3:0.1
     links:
       - nodejs:nodejs
