--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^3.1.1"
   },
   "devDependencies": {
+    "@angular/cli": "^1.6.8",
     "eslint": "^3.15.0",
     "lab": "^10.8.2"
   }
